welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:9: error: type mismatch;
 found   : Unit
 required: Boolean
		if (outsideMode == true) {
                ^